Deleted boilerplate code for app.css index.css and fixed scrolling issue by remove overflow:hidden in html from singleproject.css

--- a/frontend/src/features/projects/SingleProject.css
+++ b/frontend/src/features/projects/SingleProject.css
@@ -7,7 +7,6 @@
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
   }
 
 #root {
